--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <img class="logo" src="./assets/icones/logotipo-gamer.svg"
                     alt="Logotipo da empresa. Texto Gamer com um joystick ao centro">
 
-                <nav class="menu">
+                <nav class="menu" id="menu">
                     <a href="">Início</a>
                     <a href="">Jogadores</a>
                     <a href="">Equipes</a>
@@ -80,10 +80,10 @@
                 </nav>
 
                 <!-- menu 3 pontinhos -->
-                <img src="./assets/icones/menu-pontinhos.svg" class="menu-pontinhos"
+                <img onclick="mostraPerfil()" src="./assets/icones/menu-pontinhos.svg" class="menu-pontinhos"
                     alt="Ícone 3 pontinhos, abre o menu de usuários">
-
-                <div class="menu-usuarios">
+                
+                <div  class="menu-usuarios" id="menu usuarios">
                     <a href="">
                         <img src="./assets/icones/iconeperfil.svg" alt="Ícone de perfil">
                     </a>
@@ -96,13 +96,39 @@
                 </div>
             </div>
         </div>
+ 
     </header>
+
+<main>
+   
+   
+   
+    <section class="banner">
+
+        <h1> Liga Gamers</h1>
+        <button class="botao-sobre"></button>
+
+
+
+    </section>
+
+
+
+
+</main>
+
+
+
+
+
 <script>
 function mostrarMenu() {
-    alert("Bora Abrir o Menu")
-
+    
+    document.getElementById("menu").classList.toggle("mostrar-menu");
 }
-
+function mostraPerfil() {
+    document.getElementById("menu usuarios").classList.toggle("mostrar-Perfil");
+}
 </script>
 </body>
 
