--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <div class="header-bottom">
             <div class="layout-grid alinhamento-between-center">
                 <!-- menu hamburger -->
-                <img onclick="mostrarMenu()" src="assets/icones/hamburguer.svg" class="menu-hamburger"
+                <img onclick="mostrarMenu()" src="./assets/icons/bars.svg" class="menu-hamburger"
                     alt="Ícone para abrir e fechar o menu de celular">
 
-                <img class="logo" src="./assets/icones/logotipo-gamer.svg"
+                <img class="logo" src="./assets/images/logotipo-gamer.svg"
                     alt="Logotipo da empresa. Texto Gamer com um joystick ao centro">
 
                 <nav class="menu" id="menu">
@@ -58,78 +58,105 @@
                     <!-- visível apenas no mobile -->
 
                     <a class="phone">
-                        <img src="./assets/icones/icone_telefone.svg" alt="Ícone de Telefone. Abre e fecha o menu principal, no celular">
+                        <img src="./assets/icons/icone_telefone.svg"
+                            alt="Ícone de Telefone. Abre e fecha o menu principal, no celular">
                         <span>(11) 0900-1010</span>
                     </a>
                     <a class="email">
-                        <img src="./assets/icones/icone_email.svg" alt="Ícone de e-mail">
+                        <img src="./assets/icons/icone_email.svg" alt="Ícone de e-mail">
                         <span>contato@gamer.com.br</span>
                     </a>
 
                     <div class="midias-sociais">
                         <a href="">
-                            <img src="assets/icones/icone facebook.svg" alt="Imagem link do Facebook da empresa Gamer">
+                            <img src="./assets/icons/facebook.svg" alt="Imagem link do Facebook da empresa Gamer">
                         </a>
                         <a href="">
-                            <img src="./assets/icones/icone linkedin.svg" alt="Imagem link do Linkedin da empresa Gamer">
+                            <img src="./assets/icons/linkedin.svg" alt="Imagem link do Linkedin da empresa Gamer">
                         </a>
                         <a href="">
-                            <img src="./assets/icones/icone isntagram.svg" alt="Imagem link do Instagram da empresa Gamer">
+                            <img src="./assets/icons/intagram.svg" alt="Imagem link do Instagram da empresa Gamer">
                         </a>
                     </div>
                 </nav>
 
                 <!-- menu 3 pontinhos -->
-                <img onclick="mostraPerfil()" src="./assets/icones/menu-pontinhos.svg" class="menu-pontinhos"
+                <img onclick="mostrarUsuarios()" src="./assets/icons/pointers.svg" class="menu-pontinhos"
                     alt="Ícone 3 pontinhos, abre o menu de usuários">
-                
-                <div  class="menu-usuarios" id="menu usuarios">
+
+                <div class="menu-usuarios" id="menu-usuarios">
                     <a href="">
-                        <img src="./assets/icones/iconeperfil.svg" alt="Ícone de perfil">
+                        <img src="./assets/icons/user.svg" alt="Ícone de perfil">
                     </a>
                     <a href="">
-                        <img src="./assets/icones/icone sacola.svg" alt="Ícone de sacola">
+                        <img src="./assets/icons/bag.svg" alt="Ícone de sacola">
                     </a>
                     <a href="">
-                        <img src="./assets/icones/icone lupa.svg" alt="Ícone lupa de pesquisa">
+                        <img src="./assets/icons/search.svg" alt="Ícone lupa de pesquisa">
                     </a>
                 </div>
             </div>
         </div>
- 
     </header>
 
-<main>
-   
-   
-   
-    <section class="banner">
 
-        <h1> Liga Gamers</h1>
-        <button class="botao-sobre"></button>
+    <main>
 
-
-
-    </section>
+        <section class="banner">
+            <h1>Liga Gamers</h1>
+            <a href="" class="botao-sobre">Sobre</a>
+        </section>
 
 
 
+        <section class="jogos">
 
-</main>
+            <img src="./assets/images/Fifa 2023.png" alt="imagem jogo fifa 2023">
+
+            <img src="./assets/images/css-go.png" alt="imagem jogo counter striker go">
+
+
+        </section>
+
+
+        <section class="time-gamer">
+
+            <h2> ENTRE PARA O TIME PROGAMER</h2>
+
+
+            <img src="" alt="">
+            <img src="" alt="">
 
 
 
 
 
-<script>
-function mostrarMenu() {
-    
-    document.getElementById("menu").classList.toggle("mostrar-menu");
-}
-function mostraPerfil() {
-    document.getElementById("menu usuarios").classList.toggle("mostrar-Perfil");
-}
-</script>
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+    </main>
+
+    <footer>Todos os diretos reservados</footer>
+
+    <script>
+        function mostrarMenu() {
+            document.getElementById("menu").classList.toggle("mostrar-menu");
+        }
+        function mostrarUsuarios() {
+            document.getElementById("menu-usuarios").classList.toggle("mostrar-usuarios");
+        }
+    </script>
 </body>
 
 </html>
